cloudformation-2.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Creates a VPC with public and private subnets and instance 
Resources:
  VPC: 
    Type: AWS::EC2::VPC
    Properties:
      Tags: 
        - Key: name
          Value: abdo-vpc
      CidrBlock: 192.168.101.0/24
      
  PublicSubnetA: 
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: "eu-west-2a" 
      CidrBlock: 192.168.101.0/28
      MapPublicIpOnLaunch: true
      VpcId: !Ref VPC

  PrivateSubnetB: 
    Type: AWS::EC2::Subnet
    Properties: 
      AvailabilityZone: "eu-west-2b"
      CidrBlock: 192.168.101.32/28
      MapPublicIpOnLaunch: false
      VpcId: !Ref VPC

  MyEC2Instance: 
    Type: AWS::EC2::Instance
    DependsOn:
      - InstanceSecurityGroup
    Properties: 
      Tags: 
        - Key: name
          Value: abdo-instance 
      ImageId: "ami-09ee0944866c73f62" 
      InstanceType: t2.micro
      KeyName: abdo-london
      SecurityGroupIds: 
        - Ref: InstanceSecurityGroup
      SubnetId: 
          Ref: PublicSubnetA
  
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http & ssh to client host
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
    # SecurityGroupEgress:
    #   - IpProtocol: tcp
    #     FromPort: 80
    #     ToPort: 80
    #     CidrIp: 0.0.0.0/0
